--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+
+<!-- If multi-language site, reconsider usage of html lang declaration here. -->
+<html> 
 <head>
-  <title>Website Name</title>
+  <meta charset="utf-8">
+  <title>Theyalow</title>
+  <meta name="description" lang="en" content="">
+  <meta name="keywords" lang="en" content="">
+       <link rel="stylesheet" href="assets/css/style.css">
+       <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      <link rel="shortcut icon" href="favicon.ico" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 <div class="container">
 	<header>
 	<div class="wrapper">
 	<h1>Website Name</h1>
+	<nav>
 	<ul>
 		<li>Home</li>
 		<li>About Us</li>
@@ -17,23 +27,94 @@
 		<li>Solutions</li>
 		<li>Contacts</li>
 	</ul>
+	</nav>
 	</div>
+	</header>
+
+	<section class="banner">
+<ul class="slides">
+	<li>
+	<img src="#1">
 	<h2>Welcome Dear Visitors</h2>
-	<h3>PROFESSIONAL solutions Fast and effective</h2>
+	<h3>professional solutions Fast and effective</h2>
 	<button type="button">Read More</button>	
 	<button type="button">Register</button>	
-</header>
+	</li>
+	<li>
+	<img src="#2">
+	<h2>Welcome Dear Visitors</h2>
+	<h3>professional solutions Fast and effective</h2>
+	<button type="button">Read More</button>	
+	<button type="button">Register</button>	
+	</li>
+	<li>
+	<img src="#3">
+	<h2>Welcome Dear Visitors</h2>
+	<h3>professional solutions Fast and effective</h2>
+	<button type="button">Read More</button>	
+	<button type="button">Register</button>	
+	</li>
+	<li>
+	<img src="#4">
+	<h2>Welcome Dear Visitors</h2>
+	<h3>professional solutions Fast and effective</h2>
+	<button type="button">Read More</button>	
+	<button type="button">Register</button>	
+	</li>
+</ul>
+	</section>
+
 <main>
 	<div class="wrapper">
-		<section>
-			<section class="client-support"></section>
-			<section class="client-support"></section>
-			
+		<section class="row-1">
+			<section class="client-support">
+				<h3>24/7 Client Support</h3>
+				<p>lorem ipsum jhddjn djdjn ddjnd dndjdnd ndjdd dnjdd njdndn dndjndjnd djd njnd dndjnddjdn ndjnjdnd dnjndjd dnjndj</p>
+			<button type="button">Read More</button>	
+			</section>
+			<section class="premium-services">
+				<h3>Premium Services</h3>
+				<p>lorem ipsum jhddjn djdjn ddjnd dndjdnd ndjdd dnjdd njdndn dndjndjnd djd njnd dndjnddjdn ndjnjdnd dnjndjd dnjndj</p>
+			<button type="button">Read More</button>	
+			</section>
+			<section class="our-strategy">
+				<h3>Our Strategy</h3>
+				<p>lorem ipsum jhddjn djdjn ddjnd dndjdnd ndjdd dnjdd njdndn dndjndjnd djd njnd dndjnddjdn ndjnjdnd dnjndjd dnjndj</p>
+			<button type="button">Read More</button>	
+			</section>
 		</section>
-	</div>
+<section>
+	<section class="call-request">	
+<i class=""></i>
+<h3>Request a call</h3>
+<form action="#" method="post">
+<input type="text" name="first-name" placeholder="First Name"><br>
+<input type="text" name="first-name" placeholder="Last Name"><br>
+<input type="text" name="first-name" placeholder=""><br>
+<input type="submit" value="Send">
+</form>
+</section>
+<section class="latest-news">
+<h3>Latest News</h3>	
+<span>
+<img src="">
+<h4>Wed,March 15</h4>
+<p>Lorem ipsum smss sn jssnjs jsnjsn sjsnnsj snjnsnsj sjnsj snsjns sjsnjs</p>
+</span>
+</section>
+<section class="testimonials">
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	<h4>Ake Smith</h4>
+</section>
+</section>
+</div>
 </main>
-
-
+<footer>copyright........</footer>
 </div>
 </body>
 </html>                              
