--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html> 
 <head>
   <meta charset="utf-8">
-  <title>Theyalow</title>
+  <title>Website Name</title>
   <meta name="description" lang="en" content="">
   <meta name="keywords" lang="en" content="">
        <link rel="stylesheet" href="assets/css/style.css">
@@ -17,6 +17,7 @@
 	<header>
 	<div class="wrapper">
 	<h1>Website Name</h1>
+	<p>Tagline.....</p>
 	<nav>
 	<ul>
 		<li>Home</li>
@@ -63,7 +64,6 @@
 	</li>
 </ul>
 	</section>
-
 <main>
 	<div class="wrapper">
 		<section class="row-1">
@@ -83,10 +83,10 @@
 			<button type="button">Read More</button>	
 			</section>
 		</section>
-<section>
-	<section class="call-request">	
-<i class=""></i>
-<h3>Request a call</h3>
+<section class="row-2">
+<section class="call-request">	
+<span><i class="fa fa-user"></i> Request a call</span>
+<hr width="200" align="left">
 <form action="#" method="post">
 <input type="text" name="first-name" placeholder="First Name"><br>
 <input type="text" name="first-name" placeholder="Last Name"><br>
@@ -94,15 +94,26 @@
 <input type="submit" value="Send">
 </form>
 </section>
+
 <section class="latest-news">
-<h3>Latest News</h3>	
+<span><i class="fa fa-user"></i> Latest News</span>
+<hr width="200" align="left">
 <span>
-<img src="">
+<img src="#" alt="latest-news-1">
+<h4>Wed,March 15</h4>
+<p>Lorem ipsum smss sn jssnjs jsnjsn sjsnnsj snjnsnsj sjnsj snsjns sjsnjs</p>
+</span>
+<span>
+<img src="#" alt="latest-news-2">
 <h4>Wed,March 15</h4>
 <p>Lorem ipsum smss sn jssnjs jsnjsn sjsnnsj snjnsnsj sjnsj snsjns sjsnjs</p>
 </span>
 </section>
+
 <section class="testimonials">
+<i class=""></i>
+<span><i class="fa fa-user"></i>Testimonials</span>
+<hr width="200" align="left">
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -114,7 +125,7 @@
 </section>
 </div>
 </main>
-<footer>copyright........</footer>
+<footer><p>copyright........</p></footer>
 </div>
 </body>
 </html>                              
