--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 		</section>
 <section class="row-2">
 <section class="call-request">	
-<span><i class="fa fa-user"></i> Request a call</span>
+<h3><i class="fa fa-user"></i> Request a call</h3>
 <hr width="200" align="left">
 <form action="#" method="post">
 <input type="text" name="first-name" placeholder="First Name"><br>
@@ -96,35 +96,39 @@
 </section>
 
 <section class="latest-news">
-<span><i class="fa fa-user"></i> Latest News</span>
+<h3><i class="fa fa-user"></i>Latest News</h3>
 <hr width="200" align="left">
-<span>
+<div class="image-1">
 <img src="#" alt="latest-news-1">
+</div>
+<div class="content-2">
 <h4>Wed,March 15</h4>
 <p>Lorem ipsum smss sn jssnjs jsnjsn sjsnnsj snjnsnsj sjnsj snsjns sjsnjs</p>
-</span>
-<span>
+</div>
+<div class="image-2">
 <img src="#" alt="latest-news-2">
+</div>
+<div class="content-2">
 <h4>Wed,March 15</h4>
 <p>Lorem ipsum smss sn jssnjs jsnjsn sjsnnsj snjnsnsj sjnsj snsjns sjsnjs</p>
-</span>
+</div>
 </section>
 
 <section class="testimonials">
 <i class=""></i>
-<span><i class="fa fa-user"></i>Testimonials</span>
+<h3><i class="fa fa-user"></i>Testimonials</h3>
 <hr width="200" align="left">
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 	<h4>Ake Smith</h4>
 </section>
 </section>
 </div>
 </main>
+
 <footer><p>copyright........</p></footer>
 </div>
 </body>
