--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 <form action="#" method="post">
 <input type="text" name="first-name" placeholder="First Name"><br>
 <input type="text" name="first-name" placeholder="Last Name"><br>
-<input type="text" name="first-name" placeholder=""><br>
+<input type="text" name="first-name" placeholder="Your Phone Number"><br>
 <input type="submit" value="Send">
 </form>
 </section>
@@ -128,7 +128,6 @@
 </section>
 </div>
 </main>
-
 <footer><p>copyright........</p></footer>
 </div>
 </body>
